apps/container-registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: container-registry
  labels:
    app.kubernetes.io/part-of: fitlogger-infra
