apps/container-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: container-registry
  labels:
    app.kubernetes.io/name: registry
    app.kubernetes.io/part-of: fitlogger-infra
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: registry
  ports:
    - name: registry
      port: 5000
      targetPort: registry
      protocol: TCP
