apps/container-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: container-registry
  labels:
    app.kubernetes.io/name: registry
    app.kubernetes.io/part-of: fitlogger-infra
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: registry.fitlogger.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui
                port:
                  number: 80
